ruby/2.6.0/extensions/x86_64-linux/2.6.0/json-1.8.2/gem_make.out
current directory: /home/dagans/projects/phwelo.github.io/ruby/2.6.0/gems/json-1.8.2/ext/json/ext/generator
/usr/bin/ruby -I /usr/lib/ruby/2.6.0 -r ./siteconf20191212-22168-hfvmv6.rb extconf.rb
creating Makefile

current directory: /home/dagans/projects/phwelo.github.io/ruby/2.6.0/gems/json-1.8.2/ext/json/ext/generator
make "DESTDIR=" clean

current directory: /home/dagans/projects/phwelo.github.io/ruby/2.6.0/gems/json-1.8.2/ext/json/ext/generator
make "DESTDIR="
compiling generator.c
generator.c: In function ‘generate_json’:
generator.c:867:25: error: ‘rb_cFixnum’ undeclared (first use in this function); did you mean ‘mFixnum’?
  867 |     } else if (klass == rb_cFixnum) {
      |                         ^~~~~~~~~~
      |                         mFixnum
generator.c:867:25: note: each undeclared identifier is reported only once for each function it appears in
generator.c:869:25: error: ‘rb_cBignum’ undeclared (first use in this function); did you mean ‘mBignum’?
  869 |     } else if (klass == rb_cBignum) {
      |                         ^~~~~~~~~~
      |                         mBignum
make: *** [Makefile:245: generator.o] Error 1

make failed, exit code 2
